<resources>
    <string name="app_name">Biirr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="percentage">Percentage</string>
    <string name="how_bitter">How Bitter</string>
    <string name="hipster_plus">Hipster Plus</string>
    <string name="bitter">Bitter</string>
    <string name="smooth">Smooth</string>
</resources>